# pycon-djangogirls-workshop

./: .gitignore  .pdm-python  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/css/: blog.css
blog/templates/blog/: base.html  post_detail.html  post_list.html
mysite/: settings.py
